syntax = "proto3";
package rpc_fs;

message GetAttrRequest {
    uint64 inode = 1;
}

enum FileType {
    REGULAR = 0;
    DIRECTORY = 1;
}

message Attr {
    uint64 inode = 1;
    uint64 size = 2;
    uint64 blocks = 3;
    FileType kind = 4;
    uint32 permission = 5;
    uint32 nlink = 6;
    uint32 uid = 7;
    uint32 gid = 8;
    uint32 rdev = 9;
    uint32 blksize = 10;
}

message GetAttrReply {
    Attr attributes = 1;
}

message ReadDirRequest {
    string path = 1;
}

message DirEntries {
    uint64 inode = 1;
    string file_name = 2;
    FileType kind = 3;
}

message ReadDirReply {
    bytes dirents_t = 1;
}

message OpenRequest {
    string path = 1;
    int32 flags = 2;
}

message OpenReply {
    int32 fd = 1;
}

message ReadRequest {
    int32 fd = 1;
    int64 size = 2;
    uint64 offset = 3;
}

message ReadReply {
    bytes data = 1;
}

service RpcFs {
    rpc GetAttr (GetAttrRequest) returns (GetAttrReply);
    rpc ReadDir (ReadDirRequest) returns (ReadDirReply);
    rpc Open (OpenRequest) returns (OpenReply);
    rpc Read (ReadRequest) returns (ReadReply);
}
